# $Id$

2007-06-18	Denis M. Gabaidulin

	* main/core/Form/Primitives/PrimitiveString.class.php: simple url
	pattern added.

2007-06-18	Konstantin V. Arkhipov

	* core/Form/MappedForm.class.php: now checks Form's rules upon
	import().

2007-06-16	Konstantin V. Arkhipov

	* 0.10.2 released.

2007-06-15	Dmitry A. Lomash

	* core/Base/: compare() moved from Timestamp to Date.

2007-06-14	Sergey M. Skachkov

	* main/Utils/TidyValidator.class.php: simple HTML validator and
	repairer introduced.

2007-06-14	Konstantin V. Arkhipov

	* global.inc.php.tpl: __autoload() now able to handle classes with
	broken declarations.

2007-06-13	Konstantin V. Arkhipov

	* main/Criteria/Criteria.class.php: getCustom() now able to return
	final value if index is specified.

2007-06-10	Konstantin V. Arkhipov

	* main/Flow/FormedController.class.php: obsoleted.

2007-06-04	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: cutOnSpace() added.

2007-06-01	Konstantin V. Arkhipov

	* 0.10.1 released.

2007-05-30	Konstantin V. Arkhipov

	* main/Criteria/Projections/ClassProjection.class.php: new projection
	type introduced.

2007-05-29	Ivan Y. Khvostishkov

	* main/Utils/RussianTextUtils.class.php: added charset detection.

2007-05-24	Konstantin V. Arkhipov

	* core/Base/Singleton.class.php, ext/src/core/Base/Singleton.c:
	getAllInstances() added.

	* main/DAOs/GenericDAO.class.php: dropIdentityMap() added.

	* core/Cache/: now drops all identity maps from available DAOs during
	clean().

2007-05-23	Anton E. Lebedevich

	* main/Flow/HttpErrorView.class.php: HttpErrorView added.

2007-05-21	Dmitry A. Lomash

	* main/Utils/IO/Reader.class.php,
	main/Utils/IO/StringReader.class.php: getWhole() added.

2007-05-19	Dmitry A. Lomash

	* main/Utils/IO/: Reader and StringReader added.

2007-05-17	Ivan Y. Khvostishkov

	* main/Utils/IO/: client socket implementation.

2007-05-16	Denis M. Gabaidulin

	* main/Utils/FileUtils.class.php: makeUniqueName() added.

2007-05-15	Denis M. Gabaidulin
